<package>
  <version>0.0.1</version>
  <name>planner</name>
  <description>

  PRM planner example for so3_quadrotor_simulator

  </description>

  <maintainer email="siyuanwu99@gmail.com">Siyuan Wu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>map_server</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>cmake_utils</build_depend>

  <run_depend>map_server</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>quadrotor_msgs</run_depend>
  <run_depend>cmake_utils</run_depend>

</package>