<package>
  <version>0.0.0</version>
  <name>traj_opt</name>
  <description>

     trajectory optimization

  </description>
  <maintainer email="siyuanwu99@gmail.com">Siyuan Wu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

</package>


